Implement sprite class
Set origin to bottom left corner of the window for drawing

--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -130,8 +130,10 @@
     <ClCompile Include="src\engine\opengl\vertexArray.cpp" />
     <ClCompile Include="src\engine\opengl\vertexBuffer.cpp" />
     <ClCompile Include="src\engine\renderer.cpp" />
+    <ClCompile Include="src\engine\sprite.cpp" />
     <ClCompile Include="src\engine\state.cpp" />
     <ClCompile Include="src\game\combat.cpp" />
+    <ClCompile Include="src\game\customization.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\math\vec.cpp" />
   </ItemGroup>
@@ -147,8 +149,10 @@
     <ClInclude Include="src\engine\opengl\vertexBuffer.hpp" />
     <ClInclude Include="src\engine\opengl\vertexBufferLayout.hpp" />
     <ClInclude Include="src\engine\renderer.hpp" />
+    <ClInclude Include="src\engine\sprite.hpp" />
     <ClInclude Include="src\engine\state.hpp" />
     <ClInclude Include="src\game\combat.hpp" />
+    <ClInclude Include="src\game\customization.hpp" />
     <ClInclude Include="src\math\math.hpp" />
     <ClInclude Include="src\math\util.hpp" />
     <ClInclude Include="src\math\vec.hpp" />
