--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -133,8 +133,10 @@
     <ClCompile Include="src\engine\sprite.cpp" />
     <ClCompile Include="src\engine\state.cpp" />
     <ClCompile Include="src\game\combat.cpp" />
+    <ClCompile Include="src\game\combat\player.cpp" />
     <ClCompile Include="src\game\customization.cpp" />
     <ClCompile Include="src\game\cutscene.cpp" />
+    <ClCompile Include="src\game\combat\grid.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\math\vec.cpp" />
   </ItemGroup>
@@ -153,8 +155,10 @@
     <ClInclude Include="src\engine\sprite.hpp" />
     <ClInclude Include="src\engine\state.hpp" />
     <ClInclude Include="src\game\combat.hpp" />
+    <ClInclude Include="src\game\combat\player.hpp" />
     <ClInclude Include="src\game\customization.hpp" />
     <ClInclude Include="src\game\cutscene.hpp" />
+    <ClInclude Include="src\game\combat\grid.hpp" />
     <ClInclude Include="src\math\math.hpp" />
     <ClInclude Include="src\math\util.hpp" />
     <ClInclude Include="src\math\vec.hpp" />
