API update. Text Renderer lives in engine now.

--- a/WyvernsNest.vcxproj.filters
+++ b/WyvernsNest.vcxproj.filters
@@ -63,7 +63,7 @@
     <ClCompile Include="src\engine\text\font.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\engine\text\text.cpp">
+    <ClCompile Include="src\engine\text\textRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -128,10 +128,10 @@
     <ClInclude Include="src\game\unitData.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\text\text.hpp">
+    <ClInclude Include="src\engine\text\font.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\text\font.hpp">
+    <ClInclude Include="src\engine\text\textRenderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
