--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -139,7 +139,7 @@
     <ClCompile Include="src\engine\sprite.cpp" />
     <ClCompile Include="src\engine\state.cpp" />
     <ClCompile Include="src\engine\text\font.cpp" />
-    <ClCompile Include="src\engine\text\text.cpp" />
+    <ClCompile Include="src\engine\text\textRenderer.cpp" />
     <ClCompile Include="src\game\combat.cpp" />
     <ClCompile Include="src\game\customization.cpp" />
     <ClCompile Include="src\game\cutscene.cpp" />
@@ -161,7 +161,7 @@
     <ClInclude Include="src\engine\sprite.hpp" />
     <ClInclude Include="src\engine\state.hpp" />
     <ClInclude Include="src\engine\text\font.hpp" />
-    <ClInclude Include="src\engine\text\text.hpp" />
+    <ClInclude Include="src\engine\text\textRenderer.hpp" />
     <ClInclude Include="src\game\combat.hpp" />
     <ClInclude Include="src\game\customization.hpp" />
     <ClInclude Include="src\game\cutscene.hpp" />
