Add freetype library to repo.

--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,8 @@ ipch/
 *.VC.VC.opendb
 
 # Library directory
-libs/
+/libs/*
+!/libs/freetype/
 
 # VScode folder
 .vs/
@@ -62,3 +63,4 @@ libs/
 
 # DLL files
 *.dll
+!freetype.dll
