Revert "Add freetype library to repo."
This reverts commit 5998538abfc68beded127645185e20b3279982c1.

--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,7 @@ ipch/
 *.VC.VC.opendb
 
 # Library directory
-/libs/*
-!/libs/freetype/
+libs/
 
 # VScode folder
 .vs/
@@ -63,4 +62,3 @@ ipch/
 
 # DLL files
 *.dll
-!freetype.dll
