--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="src\engine\sprite.cpp" />
     <ClCompile Include="src\engine\state.cpp" />
     <ClCompile Include="src\game\combat.cpp" />
+    <ClCompile Include="src\game\combat\enemy.cpp" />
     <ClCompile Include="src\game\combat\player.cpp" />
     <ClCompile Include="src\game\customization.cpp" />
     <ClCompile Include="src\game\cutscene.cpp" />
@@ -155,6 +156,8 @@
     <ClInclude Include="src\engine\sprite.hpp" />
     <ClInclude Include="src\engine\state.hpp" />
     <ClInclude Include="src\game\combat.hpp" />
+    <ClInclude Include="src\game\combat\attack.hpp" />
+    <ClInclude Include="src\game\combat\enemy.hpp" />
     <ClInclude Include="src\game\combat\player.hpp" />
     <ClInclude Include="src\game\customization.hpp" />
     <ClInclude Include="src\game\cutscene.hpp" />
