--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="src\game\combat.cpp" />
     <ClCompile Include="src\game\combat\enemy.cpp" />
     <ClCompile Include="src\game\combat\player.cpp" />
+    <ClCompile Include="src\game\combat\unit.cpp" />
     <ClCompile Include="src\game\customization.cpp" />
     <ClCompile Include="src\game\cutscene.cpp" />
     <ClCompile Include="src\game\combat\grid.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="src\game\combat\attack.hpp" />
     <ClInclude Include="src\game\combat\enemy.hpp" />
     <ClInclude Include="src\game\combat\player.hpp" />
+    <ClInclude Include="src\game\combat\unit.hpp" />
     <ClInclude Include="src\game\customization.hpp" />
     <ClInclude Include="src\game\cutscene.hpp" />
     <ClInclude Include="src\game\combat\grid.hpp" />
