--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="src\engine\sprite.cpp" />
     <ClCompile Include="src\engine\state.cpp" />
     <ClCompile Include="src\game\combat.cpp" />
+    <ClCompile Include="src\game\combat\attack.cpp" />
     <ClCompile Include="src\game\combat\enemy.cpp" />
     <ClCompile Include="src\game\combat\player.cpp" />
     <ClCompile Include="src\game\combat\unit.cpp" />
