turns established, with new state done that indicates its next unit turn. fixed the shadows such that they move with player, changed how health works and started writing code linked to pathfinding (not tested yet)

--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="src\game\combat.hpp" />
     <ClInclude Include="src\game\combat\attack.hpp" />
     <ClInclude Include="src\game\combat\enemy.hpp" />
+    <ClInclude Include="src\game\combat\node.hpp" />
     <ClInclude Include="src\game\combat\player.hpp" />
     <ClInclude Include="src\game\combat\unit.hpp" />
     <ClInclude Include="src\game\customization.hpp" />
