Implement a very basic menu state

--- a/WyvernsNest.vcxproj.filters
+++ b/WyvernsNest.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="src\engine\text\textRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\game\menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\engine\engine.hpp">
@@ -166,6 +169,9 @@
     </ClInclude>
     <ClInclude Include="src\game\combat\node.hpp">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game\menu.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
