--- a/WyvernsNest.vcxproj.filters
+++ b/WyvernsNest.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="src\game\menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\engine\textureManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\engine\engine.hpp">
@@ -171,6 +174,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\game\menu.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\textureManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
