animated sprites sort of

--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\engine\animatedSprite.cpp" />
     <ClCompile Include="src\engine\engine.cpp" />
     <ClCompile Include="src\engine\entity.cpp" />
     <ClCompile Include="src\engine\opengl\indexBuffer.cpp" />
@@ -154,6 +155,7 @@
     <ClCompile Include="src\math\vec.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\engine\animatedSprite.hpp" />
     <ClInclude Include="src\engine\core.hpp" />
     <ClInclude Include="src\engine\engine.hpp" />
     <ClInclude Include="src\engine\entity.hpp" />
