Update project settings to include SDL_Mixer library for audio engine
Remove freetype library from project remote repository

--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,6 @@ ipch/
 
 # Library directory
 /libs/*
-!/libs/freetype
 
 # VScode folder
 .vs/
@@ -63,4 +62,6 @@ ipch/
 
 # DLL files
 *.dll
-!freetype.dll
+
+# ZIP files
+*.zip
