--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="src\engine\text\textRenderer.cpp" />
     <ClCompile Include="src\game\combat.cpp" />
     <ClCompile Include="src\game\combat\attack.cpp" />
+    <ClCompile Include="src\game\combat\enemies\basicWarriorEnemy.cpp" />
     <ClCompile Include="src\game\combat\enemy.cpp" />
     <ClCompile Include="src\game\combat\player.cpp" />
     <ClCompile Include="src\game\combat\unit.cpp" />
@@ -177,6 +178,7 @@
     <ClInclude Include="src\engine\text\textRenderer.hpp" />
     <ClInclude Include="src\game\combat.hpp" />
     <ClInclude Include="src\game\combat\attack.hpp" />
+    <ClInclude Include="src\game\combat\enemies\basicWarriorEnemy.hpp" />
     <ClInclude Include="src\game\combat\enemy.hpp" />
     <ClInclude Include="src\game\combat\player.hpp" />
     <ClInclude Include="src\game\combat\unit.hpp" />
