Update attack stat modifiers to allow multiple modifiers on one attack
Update attackLoader class to be able to read in stat modifiers

Update attacks documentation to refelct new changes

--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="src\engine\text\textRenderer.hpp" />
     <ClInclude Include="src\game\combat.hpp" />
     <ClInclude Include="src\game\combat\attack.hpp" />
+    <ClInclude Include="src\game\combat\attackEffects.hpp" />
     <ClInclude Include="src\game\combat\enemies\basicWarriorEnemy.hpp" />
     <ClInclude Include="src\game\combat\enemy.hpp" />
     <ClInclude Include="src\game\combat\player.hpp" />
