--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -150,10 +150,12 @@
     <ClCompile Include="src\game\combat\enemy.cpp" />
     <ClCompile Include="src\game\combat\player.cpp" />
     <ClCompile Include="src\game\combat\unit.cpp" />
+    <ClCompile Include="src\game\creditsmenu.cpp" />
     <ClCompile Include="src\game\customization.cpp" />
     <ClCompile Include="src\game\cutscene.cpp" />
     <ClCompile Include="src\game\combat\grid.cpp" />
     <ClCompile Include="src\game\menu.cpp" />
+    <ClCompile Include="src\game\settingsmenu.cpp" />
     <ClCompile Include="src\game\skillTree.cpp" />
     <ClCompile Include="src\game\util\attackloader.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -186,10 +188,12 @@
     <ClInclude Include="src\game\combat\enemy.hpp" />
     <ClInclude Include="src\game\combat\player.hpp" />
     <ClInclude Include="src\game\combat\unit.hpp" />
+    <ClInclude Include="src\game\creditsmenu.hpp" />
     <ClInclude Include="src\game\customization.hpp" />
     <ClInclude Include="src\game\cutscene.hpp" />
     <ClInclude Include="src\game\combat\grid.hpp" />
     <ClInclude Include="src\game\menu.hpp" />
+    <ClInclude Include="src\game\settingsmenu.hpp" />
     <ClInclude Include="src\game\skillTree.hpp" />
     <ClInclude Include="src\game\unitData.hpp" />
     <ClInclude Include="src\game\util\attackloader.hpp" />
