--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -202,6 +202,7 @@
     <ClInclude Include="src\game\unitData.hpp" />
     <ClInclude Include="src\game\util\attackloader.hpp" />
     <ClInclude Include="src\game\util\button.hpp" />
+    <ClInclude Include="src\game\util\util.hpp" />
     <ClInclude Include="src\math\math.hpp" />
     <ClInclude Include="src\math\util.hpp" />
     <ClInclude Include="src\math\vec.hpp" />
