--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="src\engine\opengl\texture.cpp" />
     <ClCompile Include="src\engine\opengl\vertexArray.cpp" />
     <ClCompile Include="src\engine\opengl\vertexBuffer.cpp" />
+    <ClCompile Include="src\engine\particleSystem.cpp" />
     <ClCompile Include="src\engine\renderer.cpp" />
     <ClCompile Include="src\engine\sprite.cpp" />
     <ClCompile Include="src\engine\state.cpp" />
@@ -177,6 +178,7 @@
     <ClInclude Include="src\engine\opengl\vertexArray.hpp" />
     <ClInclude Include="src\engine\opengl\vertexBuffer.hpp" />
     <ClInclude Include="src\engine\opengl\vertexBufferLayout.hpp" />
+    <ClInclude Include="src\engine\particleSystem.hpp" />
     <ClInclude Include="src\engine\renderer.hpp" />
     <ClInclude Include="src\engine\sprite.hpp" />
     <ClInclude Include="src\engine\state.hpp" />
