--- a/WyvernsNest.vcxproj
+++ b/WyvernsNest.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="src\game\skillTree.cpp" />
     <ClCompile Include="src\game\util\attackloader.cpp" />
     <ClCompile Include="src\game\util\button.cpp" />
+    <ClCompile Include="src\game\util\particleloader.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\math\vec.cpp" />
   </ItemGroup>
@@ -204,6 +205,7 @@
     <ClInclude Include="src\game\unitData.hpp" />
     <ClInclude Include="src\game\util\attackloader.hpp" />
     <ClInclude Include="src\game\util\button.hpp" />
+    <ClInclude Include="src\game\util\particleloader.hpp" />
     <ClInclude Include="src\game\util\util.hpp" />
     <ClInclude Include="src\math\math.hpp" />
     <ClInclude Include="src\math\util.hpp" />
