added cursor entity and pause menu state. Integrated into hub state.

--- a/src/game/CMakelists.txt
+++ b/src/game/CMakelists.txt
@@ -1,10 +1,12 @@
 target_sources(Game PRIVATE
     combat.cpp
+    tile.cpp
     customization.cpp
     skillTree.cpp)
 
 target_sources(Game PRIVATE
     combat.hpp
+    tile.hpp
     customization.hpp
     skillTree.hpp
     unitData.hpp)
